21-Aug-2016 Collapsed LINQ queries of the form .Where(<expr>).FirstOrDefault() to .FirstOrDefault(<expr>).

21-Aug-2016 Fixes #222. Xcode project object UUIDs now use a different algorithm to create them (96-bit hexadecimal values), but also use the construction arguments of each type of Object to both make the UUID unique in the project, but also make them deterministic. Generating the same project will therefore yield an identical project file.

19-Aug-2016 Issue #14. Xcode projects now have the majority of paths written as relative to the project file, where appropriate. Some paths that have yet to be converted are those in custom build rules.

19-Aug-2016 Fixes #287. Xcode cross-project target dependencies now write the correct number of PBXContainerItemProxy elements into the project file. Project references are now written.

19-Aug-2016 Fixes #108. Xcode's EXCLUDED_SOURCE_FILE_NAME list appears to be satisfied with just leafnames. This of course does assume that there are no duplicate leafnames in different directories in the source.

18-Aug-2016 Issue #14. VisualStudio projects now have the majority of paths written as relative to the project file, where appropriate. Some paths that have yet to be converted are those in pre and post build commands.

12-Aug-2016 Fixes #284. If there were very sparsely distributed rank indices as mentioned below, the progress updates would stall during module dependency analysis. The stall has been removed, but there was unmetered progress that is now fixed.
